@@ -5,7 +5,7 @@
   <property name="src" location="src"/>
   <property name="build" location="classes"/>
   <property name="home" value="."/>
-  <property name="version" value="23.0"/>
+  <property name="version" value="23.1"/>
   <property name="noelf" value="true"/>
 
   <property name="debian.depends" value="default-jre-headless, libjsch-java, libjzlib-java, libjcifs-java, libv4l-0, desktop-file-utils"/>
